p2/confs/app1.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: ankammer/app1:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---

# Service

apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    app: app1
    tier: app1
spec:
  selector:
    app: app1
  ports:
  - name: http
    port: 80
    targetPort: 80
