p2/confs/app2.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx:alpine
        command: ["/bin/sh", "-c"]
        args:
        - |
          echo "<h1>APP2</h1>" > /usr/share/nginx/html/index.html
          nginx -g "daemon off;"
        ports:
        - containerPort: 80

---

# Service

apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
    tier: app2
spec:
  selector:
    app: app2
  ports:
  - name: http
    port: 80
    targetPort: 80
