p2/confs/app3.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: nginx:alpine
        command: ["/bin/sh", "-c"]
        args:
        - |
          echo "<h1>APP3</h1>" > /usr/share/nginx/html/index.html
          nginx -g "daemon off;"
        ports:
        - containerPort: 80

---

# Service

apiVersion: v1
kind: Service
metadata:
  name: app3
  labels:
    app: app3
    tier: app3
spec:
  selector:
    app: app3
  ports:
  - name: http
    port: 80
    targetPort: 80
